--- a/.github/workflows/run-e2e-regression-test-suites.yml
+++ b/.github/workflows/run-e2e-regression-test-suites.yml
@@ -7,8 +7,8 @@ on:
         type: string
         default: production
       use_pr_head_sha:
-        type: string
-        default: 'false'
+        type: boolean
+        default: false
       build_source_id:
         type: string
         required: false
@@ -49,7 +49,7 @@ jobs:
       - name: Determine checkout SHA
         id: getSHA
         run: |
-          if ${{ inputs.use_pr_head_sha }} == 'true'; then
+          if ${{ inputs.use_pr_head_sha }}; then
             sha=${{ github.event.pull_request.head.sha }}
           else
             sha=${{ github.sha }}
