--- a/.github/workflows/deploy-sanity-suite.yml
+++ b/.github/workflows/deploy-sanity-suite.yml
@@ -7,8 +7,8 @@ on:
         type: string
         required: true
       use_pr_head_sha:
-        type: string
-        default: 'false'
+        type: boolean
+        default: false
       beta_identifier:
         type: string
         required: false
@@ -63,7 +63,7 @@ jobs:
       - name: Determine checkout SHA
         id: getSHA
         run: |
-          if ${{ inputs.use_pr_head_sha }} == 'true'; then
+          if ${{ inputs.use_pr_head_sha }}; then
             sha=$(echo ${{ github.event.pull_request.head.sha }})
           else
             sha=$(echo ${{ github.sha }})
@@ -219,4 +219,4 @@ jobs:
           release_ticket_id: ${{ inputs.release_ticket_id }}
           slack_bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
           deployment_name: 'Sanity Suite'
-          slack_response: ${{ steps.slack.outputs.response }}
+          slack_api_response: ${{ steps.slack.outputs.response }}
